model-serving/kubernetes/service.service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8001
      targetPort: 80
      protocol: TCP
  selector:
    app: service
